<resources>
    <string name="app_name">Belajar Android Dasar</string>
    <string name="nameEditText">Name: </string>
    <string name="sayHelloButton">Say Hello</string>
    <string name="sayHelloTextView">Hello %1$s</string>
    <string-array name="myNames">
        <item>Prihanto</item>
        <item>Edy</item>
        <item>Sanjaya</item>
    </string-array>
</resources>